--- a/40_Middleware_Intro/AsyncErrors/package.json
+++ b/40_Middleware_Intro/AsyncErrors/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "39_YelpCamp",
+  "name": "38_Mongoose_Express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
-    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.5"
